--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
   </nav>
 
   <div class="intro">
-    <img src="https://upload.wikimedia.org/wikipedia/zh/7/7c/Doraemon_character.png" alt="avatar" />
+    <img src="photo.jpg" alt="My photo" style="width: 180px; border-radius: 50%;" />
     <h2>Welcome!</h2>
     <p>
-      這是我的小作品網頁，目前還沒串後端資料庫。<br />
-      您可以在下方留言。<br />
-      點 F5 會刷新並清除所有留言與計數。
+      嗨!我是台大的學生，目前就讀電機資安所<br />
+      這是我的作業四<br />
+      蠟筆小新是我的頭貼。
     </p>
   </div>
 
