--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
   <nav>
     <div>
-      網頁攻防實習 &nbsp;|&nbsp; About &nbsp;|&nbsp; Chat &nbsp;|&nbsp; 參觀人數 <span id="visitor-count">0</span>
+      網路攻防實習 &nbsp;|&nbsp; About &nbsp;|&nbsp; Chat &nbsp;|&nbsp; 參觀人數 <span id="visitor-count">0</span>
     </div>
     <div>
       <button>Login</button>
