--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <!-- About 區塊 -->
   <div id="about" class="section active">
-    <img src="photo.jpg" alt="My photo" class="avatar" />
+    <img src="photo.png" alt="My photo" class="avatar" />
     <h2>Welcome!</h2>
     <p>
       嗨!我是台大的學生，目前就讀電機資安所<br />
